Updated video to remove watermark

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="hero">
         <div class="video-container">
             <video autoplay muted loop>
-                <source src="./assets/h6f7bba72_V1-0005_10.06.2016_Party of roof00673257_FPpreview.mp4" type="video/mp4">
+                <source src="./assets/5120279_Adult_Party_Arms_1280x720(1).mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
