--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Local Pour</title>
-
+  <link rel="icon" type="image/x-icon" href="/assets/icons8-cocktail-doodle-favicons/Web/icons8-cocktail-doodle-16.png">
   <link href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Itim&family=Lilita+One&family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/76b4a5bfe4.js" crossorigin="anonymous"></script>
