Edited copy under h3

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
         <div class="text">
           <h3>Your new neighborhood hangout</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam animi iusto quis earum, voluptatum impedit vero cum atque suscipit tempore blanditiis officia inventore vitae at.</p>
+          <p>Whether you're seeking an intimate hangout with neighbors or a lively celebration with friends, The Local Pour has a great night waiting with your name on it. Immerse yourself in the vibrant atmosphere, where every sip is a celebration and every moment is a memory waiting to be made.</p>
         </div>
       </div>  
     </section>
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="text">
           <h3>Top Off Your Tank</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus esse qui laborum sunt temporibus? Qui facilis nesciunt modi ab aspernatur?</p>
+          <p>Our expertly crafted cocktails, extensive selection of beverages, and fun vibes create the ideal setting for unwinding after a long day or turning up the energy with friends. Cheers to making memories that last a lifetime!</p>
         </div>
         <div class="img">
           <div class="hero-img">
